See the end of the file for license conditions.

This file is about changes in BNF Mode.

* Unreleased
** Tests were migrated from ert-runner to buttercup.
Previously BNF Mode used `ert' through `ert-runner' for testing
purposes.  However, it seems `ert-runner' is semi-abandoned.  Thus,
tests were migrated to use more aggressively maintained test
framework calles `buttercup'.

* BNF Mode 0.4.4
** Rework documentation and provide Info-file.
Previous releases of BNF Mode were bundled with incorrect “dir” file
that contained an invalid link to documentation.  This was
resolved.  All documentation now lives in “info bnf-mode”.

* BNF Mode 0.4.3
** Fixed dependency list in the Cask file.
Dependency list was fixed by specifying `cl-lib' version as well as
removing `rx' (`rx' is part of GNU Emacs actually).  This fixed the
issue reported in <https://github.com/sergeyklay/bnf-mode/issues/5>.
The issue is related to installation from the TAR file.

** CI/CD process was moved on GitHub Actions.

* BNF Mode 0.4.2
** First release in ELPA.

** Introduced ALGOL 60 comments style. Disabled by default.

** Use semicolons as a comments.
Only setting `bnf-mode-algol-comments-style' to non-nil will allow use
semicolons as a regular terminal symbols.

* BNF Mode 0.4.1
** Minor fix related to build & deploy BNF Mode on Travis CI.

* BNF Mode 0.4.0
** Added comment-start-skip to improve recognize comments.

** Return back comment-start and comment-end.

** Use more intelligent terminal syntax recognition.
Added support of ";" character as an extra character used in terminals.

** Provided ability to build installation package.
See make help for more.

* BNF Mode 0.3.2
** First release in MELPA.

** Treat ' and " as a regular symbols.

** Removed no longer needed comment-* variables.

** In the BNF there are no grouping brackets except angle ones.

** Removed the bnf-mode-version function.
Users can easily call describe-package or pkg-info-package-version